
  o New model-summary dialog for linear models, allowing selection of sandwich standard errors; similar options provided in linear hypothesis and ANOVA dialogs for linear models (generalizing a suggestion of Liviu Andronic).

  o New single-sample Wilcoxon test dialog (suggestion of Manuel Munoz Marquez).

  o New drop unused factor levels dialog (suggestion of Manuel Munoz Marquez).

  o Improved handling of help in Mac OS X.

  o Updated getting-started manual.

  o Small changes/improvements.

  o Updated Spanish translation (thanks to Manuel Munoz Marquez); upated German translation (thanks to Friedrich Leisch).

Changes to Version 2.0-5

  o New Basque translation (courtesy of Jose Ramon Rueda).

Changes to Version 2.0-4

  o Updated Slovenian translation (with thanks to Jaro.Lajovic and Matjaz Jeran).

  o Fixed numSummary() so that it doesn't fail when there's an empty factor level (problem reported by Alan Mainwaring).

  o ActiveDataSet(NULL) now removes the active data set.

Changes to Version 2.0-3

  o Updated Polish translation (with thanks to Lukasz Daniel).

  o titleLabel() to format a label in title font and color; exported for plug-ins.

  o Added histograms by group (suggestion of Sarah Dawson).

  o Small interface improvements.

  o Fixed bug in French translation preventing loading R Markdown files (reported by J. Mazet).

Changes to Version 2.0-2

  o Moved knitr and markdown packages to Suggests: (suggestion of Dirk Eddelbuettel).

  o Updated Japanese translation of Getting Started manual (by Takaharu Araki).

  o Added editing buttons with tooltips to Rcmdr editor.

  o Added Mac OS X command-key combinations.

  o Tweaks to ttk theme and font handling (with help of Philippe Grosjean and the tcltk2 package).

  o Small bug fixes.

Changes to Version 2.0-1

  o Caching of variable names, factor names, etc., to improve menu refreshes in large data sets (in response to observation of Yoshinobu Kanda).
